<resources>
  <string name="app_name">Авто Mobile</string>
  <string name="show_preview">Предварительный просмотр</string>
  <string name="clear_db">Очистить базу данных</string>
  <string name="btnHome">Личный кабинет</string>
  <string name="btnLoyal">Карта лояльности</string>
  <string name="btnNews">Новости, скидки, подарки</string>
  <string name="btnControl">Автопробег - всё под контролем</string>
  <string name="btnEnsurance">Страховки</string>
  <string name="btnFines">ПДД штрафы</string>
  <string name="btnAccident">Если ДТП - Европротокол прямо здесь!</string>
  <string name="btnProtocols">Мои европротоколы</string>
  <string name="btnFix">Книга ремонтов и обслуживания</string>
  <string name="btnContacts">Контакты</string>
  <string name="btnCalculator">Калькулятор ремонта</string>
  <string name="btnInfo">Информация</string>
  <string name="about_title">О программе</string>
  <string name="info_title">Информация</string>
  <string name="contacts_sos">SOS-вызовы</string>
  <string name="home">Главная</string>
  <string name="close">Закрыть</string>
  <string name="accident_general">ЗАПОЛНЕНИЕ ИЗВЕЩЕНИЯ О ДТП</string>
  <string name="accident_title">Если ДТП</string>
  <string name="accident_title1">ПОМОЩЬ ЗДЕСЬ И СЕЙЧАС</string>
  <string name="accident_text2">Данное приложение позволит Вам оформить мелкое ДТП без вызова ГАИ и получить страховую выплату до 400 евро </string>
  <string name="accident_text3">Для этого прямо здесь нужно заполнить бланк Извещения о ДТП (европротокол), который будет отправлен в страховую компанию и на e-mail участников ДТП прямо из приложения</string>
  <string name="accident_text4">Заполненный в приложении бланк имеет юридическую силу для получения страхового возмещения. Согласован со страховыми компаниями и ничем не отличается от бумажного</string>
  <string name="accident_title2">ПРИ ЭТОМ</string>
  <string name="accident_text5">Виновный избежит штрафа ГАИ</string>
  <string name="accident_text6">Вы экономите время и нервы на поиски и заполнение бумажного бланка</string>
  <string name="accident_text7">Можете заполнить в сумерках или ночное время</string>
  <string name="accident_text8">Пользуетесь функциями автоматического заполнения, подсказками, удобной графикой</string>
  <string name="accident_text9">Не пропустите ни один пункт</string>
  <string name="accident_text10">Сможете внести изменения в любом пункте до подписания и сохранения</string>
  <string name="accident_title3">ОБЯЗАТЕЛЬНЫЕ УСЛОВИЯ</string>
  <string name="accident_text11">В ДТП участвуют только 2 транспортных средства</string>
  <string name="accident_text12">Не пострадали люди</string>
  <string name="accident_text13">Не пострадали другие материальным объекты</string>
  <string name="accident_text14">Нет разногласий по определению виновного в ДТП, обстоятельств ДТП, характера и перечня видимых повреждений</string>
  <string name="accident_text15">Ущерб автомобилю не превышает 400 евро</string>
  <string name="accident_text16">Есть действующие водительские удостоверения</string>
  <string name="accident_text17">Есть действующие страховки</string>
  <string name="accident_text18">У водителей нет претензий к состоянию друг друга</string>
  <string name="accident_title4">КАК СОСТАВИТЬ</string>
  <string name="accident_text19">Извещение составляют водители-участники ДТП</string>
  <string name="accident_text20">Извещение составляется на одном смартфоне, поэтому для заполнения достаточно, чтобы приложение было установлено хотя бы у одного водителя</string>
  <string name="accident_text21">Оба водителя составляют один общий бланк</string>
  <string name="accident_text22">Нужно последовательно отвечать на вопросы, следуя простым инструкциям. Подсказки по заполнению - под кнопкой \"<font color="#ffff0000">i</font>\"</string>
  <string name="i">i</string>
  <string name="accident_text23">Часть данных заполняется автоматически (данные из Вашего личного кабинета, данные о страховой компании, время, местоположение и пр.) </string>
  <string name="accident_text24">Схемы ДТП и подписи водителей - прямо в приложении</string>
  <string name="accident_title5">КАК ОТПРАВИТЬ ИЗВЕЩЕНИЕ В СТРАХОВУЮ КОМПАНИЮ</string>
  <string name="accident_text25">После подписания и сохранения Извещение будет отправлено в страховую компанию и e-mail участников ДТП прямо из приложения</string>
  <string name="accident_text26">Для отправки Вам будет предложено оплатить платежной карточкой создание бланка Извещения в сумме, эквивалентной $ 1,0 прямо в приложении</string>
  <string name="accident_text27">При необходимости платеж может быть отсрочен на 1 день, при этом Извещение будет отправлено участникам ДТП и страховой компании сразу же после оплаты</string>
  <string name="accident_title6">ЧТО ДЕЛАТЬ ПРИ ДТП</string>
  <string name="accident_text28">Сохраняйте спокойствие</string>
  <string name="accident_text29">Включите аварийную сигнализацию, выставьте знак аварийной остановки</string>
  <string name="accident_text30">Убедитесь, что в ДТП не пострадали люди, а ущерб причинен только автомобилям</string>
  <string name="accident_text31">Определите, по чьей вине произошло ДТП</string>
  <string name="accident_text311">Визуально оцените повреждения автомашин каждого участника. Повреждения не должны превышать сумму, экивалентную 400 евро</string>
  <string name="accident_text312">Проверьте наличие документов друг у друга (водительское удостоверение нужной категории, страховка)</string>
  <string name="accident_text313">Проверьте физическое состояние участников ДТП - у водителей не должно быть претензий друг к другу в части алкогольного или наркотического опьянения</string>
  <string name="accident_text314">Определите: вызывать ГАИ или без вызова ГАИ составить Извещение о ДТП</string>
  <string name="accident_title7">ЧТО ДЕЛАТЬ ПОТОМ</string>
  <string name="accident_text32">Если Вы не владелец автомобиля - сообщить владельцу о ДТП</string>
  <string name="accident_text33">Обратиться в страховую компанию для получения возмещения в течение 5 дней с момента ДТП</string>
  <string name="accident_text34">При обращении в страховую компанию:</string>
  <string name="accident_text35">1) сообщить номер и дату отправки Извещения о ДТП c мобильного приложения</string>
  <string name="accident_text36">2) написать заявление о возмещение убытков и объяснение обстоятельств ДТП</string>
  <string name="accident_text37">3) предоставить ТС для осмотра</string>
  <string name="accident_text38">Вы также сможете распечатать Извещение о ДТП, полученное на ваш e-mail, для предъявления в страховую компанию</string>
  <string name="accident_text39">Заполнить извещение</string>
  <string name="accident_text40">Просто посмотреть</string>
  <string name="accident_text41">В просмотровом режиме используйте навигацию только по стрелкам сверху</string>
  <string name="pages_prev">Предыдущая страница</string>
  <string name="pages_next">Следующая страница</string>
  <string name="count_pages1">1/8</string>
  <string name="count_pages2">2/8</string>
  <string name="count_pages3">3/8</string>
  <string name="count_pages4">4/8</string>
  <string name="count_pages5">5/8</string>
  <string name="count_pages6">6/8</string>
  <string name="count_pages7">7/8</string>
  <string name="count_pages8">8/8</string>
  <string name="count1">1</string>
  <string name="count2">2</string>
  <string name="count3">3</string>
  <string name="count4">4</string>
  <string name="count4a">4a</string>
  <string name="count4b">4b</string>
  <string name="count5">5</string>
  <string name="count6">6</string>
  <string name="count7">7</string>
  <string name="count8">8</string>
  <string name="count9">9</string>
  <string name="count10">10</string>
  <string name="count11">11</string>
  <string name="count12">12</string>
  <string name="count13">13</string>
  <string name="count14">14</string>
  <string name="count15">15</string>
  <string name="count16">16</string>
  <string name="count17">17</string>
  <string name="count18">18</string>
  <string name="count6a">6\"А\"</string>
  <string name="count6b">6\"B\"</string>
  <string name="count7a">7\"А\"</string>
  <string name="count7b">7\"B\"</string>
  <string name="count8a">8\"А\"</string>
  <string name="count8b">8\"B\"</string>
  <string name="count9a">9\"А\"</string>
  <string name="count9b">9\"B\"</string>
  <string name="count10a">10\"А\"</string>
  <string name="count10b">10\"B\"</string>
  <string name="count11a">11\"А\"</string>
  <string name="count11b">11\"B\"</string>
  <string name="count12a">12\"А\"</string>
  <string name="count12b">12\"B\"</string>
  <string name="count13a">13\"А\"</string>
  <string name="count13b">13\"B\"</string>
  <string name="count14a">14\"А\"</string>
  <string name="count14b">14\"B\"</string>
  <string name="count15a">15\"А\"</string>
  <string name="count15b">15\"B\"</string>
  <string name="count16a">16\"А\"</string>
  <string name="count16b">16\"B\"</string>
  <string name="general1">Заполнение извещения о ДТП</string>
  <string name="general1a">Общие вопросы</string>
  <string name="general2">Дата ДТП</string>
  <string name="general3">Введите сюда дату</string>
  <string name="general4">Время</string>
  <string name="general5">Введите сюда время</string>
  <string name="general6">Место ДТП</string>
  <string name="general7">Введите страну</string>
  <string name="general8">Введите город (трассу, направление, \nулицу, № дома, километр трассы)\nИли укажите место на карте</string>
  <string name="general81">Geo</string>
  <string name="general82">Нажмите, чтобы изменить</string>
  <string name="general10">Есть ли пострадавшие люди?</string>
  <string name="general11">Причинен ли материальный вред прочим транспортным средствам, кроме двух участников?</string>
  <string name="general12">Причинен ли материальный вред другому имуществу, кроме транспортных средств?</string>
  <string name="general13">Свидетели ДТП</string>
  <string name="general14">показать список</string>
  <string name="general14_1">скрыть список</string>
  <string name="general14a">фамилия, имя, отчество, адрес, телефон</string>
  <string name="general15">(заполняется при наличии свидетелей)</string>
  <string name="general16">Обязательные пункты не заполнены!</string>
  <string name="general17">Готово</string>
  <string name="general17a">Просмотр</string>
  <string name="circum2a">Обст. ДТП</string>
  <string name="circum1">Схема ДТП</string>
  <string name="scheme1">Общие правила</string>
  <string name="scheme01">Нарисуйте схему ДТП</string>
  <string name="scheme2">1 - контуры проезжей части с указанием названий улиц (дорог) </string>
  <string name="scheme3">2 - конечное положение ТС \"А\" и \"В\"</string>
  <string name="scheme4">3 - направление движения ТС \"А\" и \"В\" </string>
  <string name="scheme5">4 - дорожные знаки, указатели, светофоры, дорожная разметка, которые имеют отношение к ДТП</string>
  <string name="scheme6">Если у вас не получилось нарисовать детали (светофор, знаки) - ничего страшного</string>
  <string name="scheme7">Ситуация зарисовывается схематично, кто как умеет</string>
  <string name="scheme8">Некоторые подробности Вы можете описать в примечаниях</string>
  <string name="scheme9">Как выглядит схема</string>
  <string name="scheme10">Как нарисовать дорогу</string>
  <string name="scheme11">Как нарисовать машину</string>
  <string name="scheme12">Как нарисовать знаки, светофоры и т.д.</string>
  <string name="scheme13">Как подписать улицы</string>
  <string name="scheme14">Нарисовать схему</string>
  <string name="scheme15">Как нарисовать?</string>
  <string name="scheme17">Если вы не знаете, как нарисовать схему, ознакомьтесь с правилами</string>
  <string name="scheme18">Подробнее можно узнать на странице \"Как нарисовать?\"</string>
  <string name="info">i</string>
  <string name="start_new">Заново</string>
  <string name="brush">Кисть</string>
  <string name="erase">Ластик</string>
  <string name="save">Сохранить</string>
</resources>