<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EPR_p06_SchemePage"
    tools:showIn="@layout/scheme_layout" android:layout_height="wrap_content" android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme1"
            android:id="@+id/textView"
            android:layout_below="@+id/tableLayout2"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            style="@style/text_common_heading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme2"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme3"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme4"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme5"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme6"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme7"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme8"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView7"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme9"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView8"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme10"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView9"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme11"
            android:id="@+id/textView11"
            android:layout_below="@+id/textView10"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme12"
            android:id="@+id/textView12"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            style="@style/text_common" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme13"
            android:id="@+id/textView13"
            android:layout_below="@+id/textView12"
            android:layout_alignLeft="@+id/textView12"
            android:layout_alignStart="@+id/textView12"
            style="@style/text_common" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="24dp"
            android:text="@string/general17"
            android:id="@+id/button_next"
            android:background="@drawable/back_button_pink"
            android:clickable="true"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            style="@style/button"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:visibility="visible"
            android:layout_below="@+id/textView13"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>