<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_scheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:background="@android:color/white">

    <TextView
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:background="@color/colorHeader"
        android:text="@string/count13"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        style="@style/counts_black"
        android:layout_marginTop="84dp" />

    <TextView
        android:layout_width="8dp"
        android:layout_height="fill_parent"
        android:background="@color/colorHeader"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView16" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="28dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingEnd="4dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:id="@+id/left"
                android:src="@drawable/arrow_shape"
                android:layout_column="0"
                android:layout_weight="0.25"
                android:contentDescription="@string/pages_prev"
                android:paddingTop="6dp"
                android:paddingRight="2dp"
                android:onClick="gotoCircum" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:text="@string/circum2a"
                android:id="@+id/prevPage"
                android:layout_column="1"
                style="@style/step_header"
                android:layout_weight="1"
                android:textAppearance="@style/step_header" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:text="@string/count_pages6"
                android:id="@+id/count"
                android:layout_column="3"
                android:layout_weight="1"
                style="@style/page_counts"
                android:textAppearance="@style/step_header" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:id="@+id/right"
                android:layout_column="4"
                android:src="@drawable/arrow_shape_right"
                android:layout_weight="0.25"
                android:contentDescription="@string/pages_next"
                android:paddingTop="6dp"
                android:paddingRight="2dp"
                android:onClick="gotoSignPage" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:id="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textAppearance="@style/step_header"
                android:text="@string/circum1"
                android:layout_column="1"
                style="@style/step_header2"
                android:gravity="center"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme01"
        android:id="@+id/q13"
        android:layout_marginTop="84dp"
        android:layout_marginLeft="36dp"
        style="@style/text_common_heading"
        android:layout_marginStart="36dp"
        android:layout_marginRight="24dp"
        android:layout_alignParentLeft="true" />

    <include layout="@layout/epr_p06_scheme_layout_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tableLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"
        android:id="@+id/include" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white"
        android:id="@+id/cover"
        android:visibility="visible">

    </TextView>

    <TextView
        android:layout_width="220dp"
        android:layout_height="24dp"
        android:text="@string/general17"
        android:id="@+id/button_next"
        android:background="@drawable/back_button_pink"
        android:clickable="true"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        style="@style/button"
        android:gravity="center_horizontal|top"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="false"
        android:visibility="visible"
        android:onClick="gotoSignPage"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignTop="@+id/button" />

    <TextView
        android:layout_width="220dp"
        android:layout_height="24dp"
        android:text="@string/scheme15"
        android:id="@+id/button_how_to_draw"
        android:background="@drawable/back_button_pink"
        android:clickable="true"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        style="@style/button"
        android:gravity="center_horizontal|top"
        android:paddingTop="2dp"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="220dp"
        android:layout_height="24dp"
        android:text="@string/scheme14"
        android:id="@+id/button_draw"
        android:background="@drawable/back_button_pink"
        android:clickable="true"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        style="@style/button"
        android:gravity="center_horizontal|top"
        android:paddingTop="2dp"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:layout_alignTop="@+id/tableLayout2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:text="@string/info"
        android:id="@+id/button"
        android:background="@drawable/back_red"
        android:textAllCaps="false"
        android:layout_gravity="fill_horizontal"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="10dp"
        android:layout_alignBottom="@+id/cover"
        android:onClick="btnOpenI" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme17"
        android:id="@+id/textView15"
        android:layout_below="@+id/button_draw"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView16"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        style="@style/text_common"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme1"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        style="@style/text_common_heading"
        android:layout_marginStart="26dp"
        android:layout_below="@+id/textView15"
        android:layout_toRightOf="@+id/textView16"
        android:layout_toEndOf="@+id/textView16"
        android:layout_marginRight="24dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        style="@style/text_common"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme3"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        style="@style/text_common"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme4"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        style="@style/text_common"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme5"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        style="@style/text_common"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme18"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        style="@style/text_common"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/schemeDTP"
        android:layout_below="@+id/button_how_to_draw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>


    <ListView
        android:id="@+id/info_drawer"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"/>

</android.support.v4.widget.DrawerLayout>